kuber-homeworks/1.5/kuber-task2/ingress-example-lab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: example-lab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-frontend-nginx
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: svc-backend-multitool
            port:
              number: 80
